feat: add personal library web journey
